--- a/parent.html
+++ b/parent.html
@@ -3,29 +3,43 @@
 <head>
   <meta charset="UTF-8" />
   <title>Student Results Lookup</title>
+
   <style>
     body {
       font-family: Arial, sans-serif;
       max-width: 800px;
       margin: 40px auto;
+      line-height: 1.5;
     }
     input, button {
-      padding: 8px;
-      margin: 5px 0;
+      padding: 10px;
+      margin: 6px 0;
       width: 100%;
+      font-size: 1em;
     }
     button {
       cursor: pointer;
+      background: #1f6feb;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+    }
+    button:hover {
+      background: #174ea6;
     }
     .card {
-      border: 1px solid #ccc;
+      border: 1px solid #ddd;
       padding: 12px;
-      margin-bottom: 10px;
+      margin-bottom: 12px;
       border-radius: 6px;
+      background: #fafafa;
     }
     .muted {
       color: #666;
       font-size: 0.9em;
+    }
+    hr {
+      margin: 20px 0;
     }
   </style>
 </head>
@@ -34,21 +48,22 @@
 <h2>View Student Results</h2>
 
 <p class="muted">
-  Enter the <b>Admission Number</b>, <b>First Name</b>, and <b>Last Name</b> exactly as registered.
+  Enter the <b>Admission Number</b>, <b>First Name</b>, and <b>Last Name</b>
+  exactly as registered.
 </p>
 
 <label>Admission Number</label>
-<input id="admission" placeholder="e.g. ADM123">
+<input id="admission" placeholder="e.g. 1111">
 
 <label>First Name</label>
-<input id="firstName" placeholder="e.g. John">
+<input id="firstName" placeholder="e.g. JOHN">
 
 <label>Last Name</label>
-<input id="lastName" placeholder="e.g. Doe">
+<input id="lastName" placeholder="e.g. OTIENO">
 
 <button id="checkBtn">View Results</button>
 
-<p id="status"></p>
+<p id="status" class="muted"></p>
 <hr>
 
 <div id="results"></div>
@@ -61,50 +76,64 @@
     "sb_publishable_-BGJLAySaH7bQ5lBIZF9zg_eohK-xEn"
   );
 
-  const status = document.getElementById("status");
-  const results = document.getElementById("results");
+  const statusEl = document.getElementById("status");
+  const resultsEl = document.getElementById("results");
 
   document.getElementById("checkBtn").onclick = async () => {
-    status.innerText = "Checking results...";
-    results.innerHTML = "";
+    statusEl.innerText = "Checking results…";
+    resultsEl.innerHTML = "";
 
     const admission = document.getElementById("admission").value.trim();
     const firstName = document.getElementById("firstName").value.trim();
     const lastName = document.getElementById("lastName").value.trim();
 
     if (!admission || !firstName || !lastName) {
-      status.innerText = "Please fill in all fields.";
+      statusEl.innerText = "Please fill in all fields.";
       return;
     }
 
     const { data, error } = await supabase
       .from("public_parent_results")
-      .select("*")
-      .ilike("admission_number", admission)
+      .select(`
+        student_id,
+        admission_number,
+        first_name,
+        last_name,
+        learning_area,
+        competency,
+        achievement_level,
+        remarks,
+        term,
+        academic_year
+      `)
+      .eq("admission_number", admission)
       .ilike("first_name", firstName)
       .ilike("last_name", lastName)
       .order("academic_year", { ascending: false });
 
     if (error) {
-      status.innerText = error.message;
+      statusEl.innerText = error.message;
       return;
     }
 
     if (!data || data.length === 0) {
-      status.innerText = "No results found. Please confirm the details.";
+      statusEl.innerText =
+        "No results found. Please confirm the details and try again.";
       return;
     }
 
-    status.innerText = "";
+    statusEl.innerText = "";
 
-    results.innerHTML = data.map(r => `
+    resultsEl.innerHTML = data.map(r => `
       <div class="card">
         <strong>${r.first_name} ${r.last_name}</strong><br>
         <span class="muted">${r.learning_area}</span><br>
         ${r.competency}<br>
         <b>${r.achievement_level}</b><br>
         <i>${r.remarks || ""}</i><br>
-        <span class="muted">${r.term} · ${r.academic_year}</span>
+        <span class="muted">
+          ${r.term || "Term"} · ${r.academic_year}
+        </span>
       </div>
     `).join("");
   };
